# liboqs

./: .gitignore  CMakeLists.txt  README.md  SETUP.sh  SETUP_DEPS.sh  test_perk_simple.c
.CMake/: alg_support.cmake
src/sig/faest/: CMakeLists.txt  sig_faest.h  sig_faest_128s.c  sig_faest_192s.c  sig_faest_256s.c  sig_faest_em_128s.c  sig_faest_em_192s.c  sig_faest_em_256s.c
src/sig/faest/faest_128s/: hash_shake.h  namespace_faest_128s.h
src/sig/faest/faest_192s/: namespace_faest_192s.h
src/sig/faest/faest_256s/: macros.h  namespace_faest_256s.h
src/sig/faest/faest_em_128s/: namespace_faest_em_128s.h
src/sig/faest/faest_em_192s/: namespace_faest_em_192s.h
src/sig/faest/faest_em_192s/sha3/: KeccakP-1600-SnP.h
src/sig/faest/faest_em_256s/: namespace_faest_em_256s.h
src/sig/hawk/: CMakeLists.txt  sig_hawk.h  sig_hawk1024.c  sig_hawk512.c
src/sig/hawk/hawk_1024/: api.c
src/sig/hawk/hawk_512/: api.c
src/sig/less1/: CMakeLists.txt  sig_less.h  sig_less_252_45.c
src/sig/less1/include/: less_252_45.h
src/sig/less1/less_252_45/: LESS1.c  canonical.c  codes.c  fips202.c  keccakf1600.c  less_252_45_namespace.h  monomial.c  rng.c  seedtree.c  sign.c  sort.c  transpose.c  utils.c
src/sig/less1/less_252_45/include/: LESS.h  api.h  codes.h  fq_arith.h  less_252_45.h  monomial_mat.h  rng.h  seedtree.h  utils.h
src/sig/mirath/: CMakeLists.txt  sig_mirath.h  sig_mirath_1a_fast.c  sig_mirath_tcith_1a_short.c  sig_mirath_tcith_1b_short.c  sig_mirath_tcith_3a_short.c  sig_mirath_tcith_3b_short.c  sig_mirath_tcith_5a_short.c  sig_mirath_tcith_5b_short.c
src/sig/mirath/mirath_tcith_1a_fast/: mirath_ggm_tree.c  mirath_parameters.h  mirath_parsing.c  mirath_sign.c  mirath_tcith.c  mirath_verify.c  namespace_mirath_tcith_1a_fast.h
src/sig/mirath/mirath_tcith_1a_fast/arith/q_16/: vector_ff_mu.h
src/sig/mirath/mirath_tcith_1a_fast/arith/q_16/mu_fast/: matrix_ff_mu.h  vector_ff_mu.h
src/sig/mirath/mirath_tcith_1a_fast/common/: KeccakP-1600-times4-SnP.h
src/sig/mirath/mirath_tcith_1a_short/: namespace_mirath_tcith_1a_short.h
src/sig/mirath/mirath_tcith_1a_short/lib/xkcp/: KeccakP-1600-opt64.c
src/sig/mirath/mirath_tcith_1b_short/: namespace_mirath_tcith_1b_short.h
src/sig/mirath/mirath_tcith_1b_short/lib/xkcp/: KeccakP-1600-opt64.c
src/sig/mirath/mirath_tcith_3a_short/: main.c  mirath_parameters.h  mirath_tcith.c  mirath_tcith.h  namespace_mirath_tcith_3a_short.h
src/sig/mirath/mirath_tcith_3a_short/lib/xkcp/: KeccakP-1600-opt64.c
src/sig/mirath/mirath_tcith_3b_short/: mirath_parameters.h  namespace_mirath_tcith_3b_short.h
src/sig/mirath/mirath_tcith_3b_short/lib/tcith/: mirath_verify.h
src/sig/mirath/mirath_tcith_3b_short/lib/xkcp/: KeccakP-1600-opt64.c
src/sig/mirath/mirath_tcith_5a_short/: mirath_parameters.h  namespace_mirath_tcith_5a_short.h
src/sig/mirath/mirath_tcith_5b_short/: namespace_mirath_tcith_5b_short.h
src/sig/mirath_OLD/: CMakeLists.txt  sig_mirath.h  sig_mirath_3a_short.c
src/sig/mirath_OLD/mirath_tcith_1a_short/: mirath_parameters.h  namespace_mirath_tcith_1a_short.h
src/sig/mirath_OLD/mirath_tcith_1b_short/: mirath_parameters.h
src/sig/mirath_OLD/mirath_tcith_3a_short/: mirath_ggm_tree.c  mirath_keygen.c  mirath_matrix_ff.h  namespace_mirath_tcith_3a_short.h
src/sig/mirath_OLD/mirath_tcith_3b_short/: namespace_mirath_tcith_3b_short.h
src/sig/mirath_OLD/mirath_tcith_5b_short/: mirath_parameters.h  namespace_mirath_tcith_5b_short.h
src/sig/mirathv2/: CMakeLists.txt  sig_mirath.h  sig_mirath_1a_short_v2.c  sig_mirath_1b_short_v2.c  sig_mirath_3a_short_v2.c  sig_mirath_3b_short_v2.c  sig_mirath_5a_short_v2.c  sig_mirath_5b_short_v2.c
src/sig/mirathv2/mirath_tcith_1a_short/: mirath_parameters.h
src/sig/mirathv2/mirath_tcith_1b_short/: mirath_parameters.h
src/sig/mirathv2/mirath_tcith_1b_short/lib/: hash_sha3_128.c
src/sig/mirathv2/mirath_tcith_3b_short/: main.c  mirath_parameters.h  sign.c
src/sig/mirathv2/mirath_tcith_5a_short/: main.c  mirath_parameters.h  mirath_parsing.c  mirath_sign.c
src/sig/mirathv2/mirath_tcith_5b_short/: main.c  mirath_parameters.h
src/sig/perk/: CMakeLists.txt  sig_perk.h  sig_perk_128_fast_3.c  sig_perk_128_short_5.c  sig_perk_192_short_3.c  sig_perk_192_short_5.c  sig_perk_ak_1_short.c  sig_perk_ak_3_short.c  sig_perk_ak_5_short.c  sig_perk_aliases.c  sig_perk_perk_128_fast_3.c
src/sig/perk-OLD/: CMakeLists.txt  sig_perk.h  sig_perk_128_fast_3.c  sig_perk_128_short_5.c  sig_perk_192_short_3.c  sig_perk_192_short_5.c  sig_perk_256_short_3.c  sig_perk_256_short_5.c
src/sig/perk-OLD/perk_128_short_5/: namespace_perk_128_short_5.h
src/sig/perk-OLD/perk_192_short_3/: namespace_perk_192_short_3.h
src/sig/perk-OLD/perk_192_short_5/: namespace_perk_192_short_5.h
src/sig/perk/perk-256-short-3/: namespace_perk_256_short_3.h
src/sig/perk/perk_128_fast_3/: namespace_perk_128_fast_3.h
src/sig/perk/perk_128_short_3/: namespace_perk_128_short_3.h
src/sig/perk/perk_128_short_5/lib/XKCP/: KeccakP-1600-SnP.h
src/sig/perk/perk_256_short_5/: namespace_perk_256_short_5.h
src/sig/perk/perk_ak_1_short/: namespace_perk_ak_1_short.h
src/sig/perk/perk_ak_3_short/: namespace_perk_ak_3_short.h
src/sig/perk/perk_ak_5_short/: namespace_perk_ak_5_short.h  signature.c  verify.c  voles.c
src/sig/qr_uov/: CMakeLists.txt  sig_qr_uov.h  sig_qr_uov_s.c
src/sig/ryde/: CMakeLists.txt  sig_ryde.h  sig_ryde1f.c  sig_ryde1s.c  sig_ryde3s.c  sig_ryde5s.c
src/sig/ryde/ryde1f/: namespace_ryde1f.h  seed_expand_rijndael.h
src/sig/ryde/ryde1f/lib/xkcp/opt64/: KeccakP-1600-SnP.h
src/sig/ryde/ryde1s/: field.h  namespace_ryde1s.h
src/sig/ryde/ryde3s/: namespace_ryde3s.h  parameters.h  seed_expand_rijndael.h  tcith.c
src/sig/ryde/ryde3s/lib/xkcp/avx2/: KeccakP-1600-times4-SnP.h
src/sig/ryde/ryde3s/src/: field_61.c
src/sig/ryde/ryde5s/: field.h  namespace_ryde5s.h  parameters.h  seed_expand_rijndael.h
src/sig/sdith/: CMakeLists.txt  sig_sdith.h  sig_sdith_cat1_short.c
src/sig/sdith/sdith_cat1_short/: namespace_sdith_cat1_short.h
src/sig/sqisign/: CMakeLists.txt  sig_sqisign.h
(+361 files in other folders)
